--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,20 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
 }
 body {
   background: #333;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .container {
   background: #222;
   width: 80vw;
-  margin:50px auto;
+  margin:0 auto;
   padding: 20px;
   border-radius: 10px;
   display: grid;
